# fixed_point_cpp

./: CMakeLists.txt  README.md  build.sh
src/: main.c  main.cpp  test_fixed_point.cpp
src/fixed_point/: fixed_point.hpp
